fix: fail if fetch is unsuccess (it's now wrapped into try-catch) + added default value for apiRespObj = {items:[]}

--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+[v-cloak]{
+    display: none;
+}
+
 :root{
     --mob-L:#9196B4;
     --mob-R:#BA8461;
